NetBSD Problem Report #40140

From www@NetBSD.org  Tue Dec  9 10:51:14 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id DD8F363B89C
	for <gnats-bugs@gnats.netbsd.org>; Tue,  9 Dec 2008 10:51:14 +0000 (UTC)
Message-Id: <20081209105114.AD4C963B121@narn.NetBSD.org>
Date: Tue,  9 Dec 2008 10:51:14 +0000 (UTC)
From: tnozaki@NetBSD.org
Reply-To: tnozaki@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: nvi + x(delete) key may fall out abort(3)
X-Send-Pr-Version: www-1.0

>Number:         40140
>Category:       bin
>Synopsis:       nvi + x(delete) key may fall out abort(3)
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Dec 09 10:55:00 +0000 2008
>Closed-Date:    Tue Dec 09 16:50:57 +0000 2008
>Last-Modified:  Tue Jan 20 02:55:01 +0000 2009
>Originator:     Takehiko NOZAKI
>Release:        5.99.4
>Organization:
>Environment:
NetBSD hypnosis 5.99.4 NetBSD 5.99.4 (GENERIC) #1: Tue Dec  9 12:37:33 JST 2008  root@hypnosis:/usr/obj/sys/arch/i386/compile/GENERIC i386
>Description:
nvi + x(delete) key may fall out abort(3).

this bug introduced recently WARN=4 cleanup:
http://mail-index.netbsd.org/source-changes/2008/12/05/msg213717.html
>How-To-Repeat:
open file with vi, and delete some character by x.

>Fix:
Index: db.c
===================================================================
RCS file: /cvsroot/src/dist/nvi/common/db.c,v
retrieving revision 1.2
diff -u -r1.2 db.c
--- db.c	5 Dec 2008 22:51:42 -0000	1.2
+++ db.c	9 Dec 2008 10:32:34 -0000
@@ -652,9 +652,9 @@
 		case LINE_RESET:
 			if (lno == scrp->c_lno)
 				scrp->c_lno = OOBLNO;
-			break;
+		/*FALLTHROUGH*/
 		case LINE_APPEND:
-			abort();
+			break;
 		}

 	if (ep->c_nlines != OOBLNO)
@@ -664,10 +664,10 @@
 			break;
 		case LINE_DELETE:
 			--ep->c_nlines;
-			break;
+		/*FALLTHROUGH*/
 		case LINE_APPEND:
 		case LINE_RESET:
-			abort();
+			break;
 		}
 }


>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Tue, 09 Dec 2008 11:50:57 -0500
State-Changed-Why:
fixed, thanks


From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40140 CVS commit: src/dist/nvi/common
Date: Tue,  9 Dec 2008 16:50:22 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Tue Dec  9 16:50:22 UTC 2008

 Modified Files:
 	src/dist/nvi/common: db.c

 Log Message:
 PR/40140: Takehiko NOZAKI: fix bug where nvi + x(delete) key may call abort(3)


 To generate a diff of this commit:
 cvs rdiff -r1.2 -r1.3 src/dist/nvi/common/db.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40140 CVS commit: [netbsd-5] src/dist/nvi/common
Date: Tue, 20 Jan 2009 02:50:02 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Tue Jan 20 02:50:02 UTC 2009

 Modified Files:
 	src/dist/nvi/common [netbsd-5]: db.c

 Log Message:
 Pull up following revision(s) (requested by 292):
 	dist/nvi/common/db.c: revision 1.3
 PR/40140: Takehiko NOZAKI: fix bug where nvi + x(delete) key may call abort(3)


 To generate a diff of this commit:
 cvs rdiff -r1.1.1.2.6.1 -r1.1.1.2.6.2 src/dist/nvi/common/db.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.