PR/40140: Takehiko NOZAKI: fix bug where nvi + x(delete) key may call abort(3)